# polars-old

polars/: Cargo.toml
polars/polars-core/src/: lib.rs
polars/polars-core/src/frame/groupby/: proxy.rs
polars/polars-io/src/csv_core/: csv.rs
polars/polars-lazy/: Cargo.toml
polars/polars-lazy/src/dsl/: mod.rs
polars/polars-lazy/src/frame/: mod.rs
polars/polars-lazy/src/logical_plan/optimizer/: mod.rs  projection_pushdown.rs
polars/polars-lazy/src/physical_plan/planner/: lp.rs
polars/polars-utils/: Cargo.toml
polars/polars-utils/src/: lib.rs  sort.rs  wasm.rs
