[package]
name = "polars-utils"
version = "0.21.1"
authors = ["ritchie46 <ritchie46@gmail.com>"]
edition = "2021"
license = "MIT"
description = "private utils for the polars dataframe library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# parking_lot = "0.12"
# parking_lot = { version = "0.12.1", features = ["nightly"] }
parking_lot = {git = "https://github.com/gitkwr/parking_lot", features = ["nightly"]}
rayon = "1.5"

[features]
bigidx = []
